Payment added
